Fixed arrow alignment and spaces

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -33,11 +33,15 @@
     gap: 3em;
 }
 
+#links p {
+    position: relative;
+}
+
 #navegacion.photo a {
     color: white;
 }
 
-.work #links a:nth-child(2)::after {
+.work #links a:nth-child(2) p::after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -47,7 +51,7 @@
     background-color: black;
 }
 
-.photo #links a:nth-child(3)::after {
+.photo #links a:nth-child(3) p::after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -57,7 +61,7 @@
     background-color: white;
 }
 
-.about #links a:last-child::after {
+.about #links a:last-child p::after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -117,9 +121,21 @@
         width: 100%;
         height: 100vh;
         position: absolute;
+        gap: 0;
         top: 0;
         background-color: #B6B6B6;
         transition: left 1s ease;
+    }
+
+    #links a {
+        display: grid;
+        place-items: center;
+        height: 100%;
+        width: 100%;
+    }
+
+    #links a:nth-child(-n+3) {
+        border-bottom: 1px solid black;
     }
     
     #hamburger {
@@ -133,6 +149,7 @@
         position: absolute;
         top: 20px;
         right: 2em;
+        z-index: 100;
     }
 
     #hamburger:hover, #close_menu:hover {
