--- a/styles/UGC-Marca.module.css
+++ b/styles/UGC-Marca.module.css
@@ -1,5 +1,6 @@
 #videougc {
     max-width: 100%;
+    border-radius: 40px;
 }
 
 #textos {
@@ -25,4 +26,12 @@
 
 #tote_gif img:nth-child(2) {
     grid-column: 3/4;
+}
+
+@media (max-width: 400px) {
+
+    #videougc {
+        border-radius: 15px;
+    }
+
 }
